manifests/registry.yml

apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30400
      name: registry
  selector:
    app: registry
    tier: registry
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
        tier: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
          name: registry
      volumes:
      - name: docker
        hostPath:
          path: /var/run/docker.sock
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: registry-claim

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registryui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registryui
    spec:
      containers:
      - name: registryui
        image: hyper/docker-registry-web
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: registryui
  labels:
    app: registryui
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: registry
  selector:
    app: registryui
    tier: registryui
  type: NodePort


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: registryui-ingress
spec:
 rules:
   - host: registry.127.0.0.1.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: registryui
             servicePort: 8080
